@startuml Builder_diagram

class Product {
}

class Director {
    + construct() : Product
    - builder : IBuilder
}

interface IBuilder {
    + {abstract} buildPartA()
    + {abstract} buildPartB()
    + {abstract} ...()
    + {abstract} getResult() : Product
}

Director *-> IBuilder
Director --> Product

class ConcreteBuilder {
    + buildPartA()
    + buildPartB()
    + ...()
    + getResult() : Product
    - product: Product
}

IBuilder <|.. ConcreteBuilder
ConcreteBuilder --> Product

@enduml
